<resources>
    <string name="app_name">TheQuest</string>
    <string name="welcome_msg1">Welcome to TheQuest!</string>
    <string name="welcome_msg21">Create an account to continue…</string>
    <string name="hint_username">Username</string>
    <string name="hint_un_em">Username or e-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="sign_up">Create Account</string>
    <string name="log_in">Log in</string>
    <string name="already">Already have an account?</string>
    <string name="log_in_button"><u>Log in</u></string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up_button"><u>Sign up</u></string>
    //login/signup errors
    <string name="error_email">E-mail doesn\'t have the correct form</string>
    <string name="un_exists">this username already exists</string>
    <string name="em_exists">this e-mail already exists</string>
    <string name="wrong_un">incorrect username or e-mail</string>
    <string name="wrong_pw">incorrect password</string>
    <string name="wrong_un_pw">incorrect username, e-mail or password</string>
    <string name="unknown_error">unknown error</string>
    <string name="username_long">Your username cannot be more than 20 characters</string>
    <string name="username_short">Your username must be at least 6 characters</string>
    <string name="username_characters">Your username must not contain special characters</string>
    <string name="password_long">Your password cannot be more than 15 characters</string>
    <string name="password_short">Your password must be at least 6 characters</string>
    <string name="password_characters">Your password cannot contain special characters</string>
    <string name="pass_no_match">The passwords do not match</string>
    <string name="welcome_msg22">Log in to continue</string>
    <string name="usernamePattern">[A-Za-z0-9_.-]*</string>
    <string name="passwordPattern"><![CDATA[[A-Za-z0-9_.@#$%^&*-]*]]></string>
    //various strings
    <string name="saveDirectory">mydir</string>
    <string name="saveFileName">log_in.txt</string>
    <string name="main_menu_fragment_name">mainMenuFragment</string>
    <string name="game_fragment_name">GameFragment</string>
    <string name="button_new_story">New Story</string>
    <string name="button_my_friends">My Friends</string>
    <string name="button_settings">Settings</string>
    <string name="button_story_workshop">Story Workshop</string>
    <string name="game_title">Game Title</string>
    <string name="browse_stories">Browse Stories</string>
    <string name="difficulty">Difficulty:</string>
    <string name="location">Location:</string>
    <string name="lorem50">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id purus enim. Aliquam convallis consectetur scelerisque. Nullam sit amet felis sit amet dolor pharetra ullamcorper sed ac odio. Vestibulum nec pellentesque mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Class aptent taciti sociosqu ad. "</string>
    <string name="play_game">Play Game</string>
    //firebase
    <string name="db_users_collection">users</string>
    <string name="db_un">username</string>
    <string name="db_em">email</string>
    <string name="db_pw">password</string>
    <string name="db_id">userid</string>
    <string name="error">error</string>
    <string name="title_activity_game_lobby">GameLobbyActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="type_here">type here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>