<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:theme="@style/Theme.TheQuest">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/game_image"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/game_title"
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingHorizontal="16dp"
                android:text="@string/game_title" />

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <TextView
                    style="@style/TextViewSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/difficulty1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:foreground="@drawable/default_dot"
                    android:minWidth="20sp"
                    android:minHeight="20sp" />

                <ImageView
                    android:id="@+id/difficulty2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:foreground="@drawable/default_dot"
                    android:minWidth="20sp"
                    android:minHeight="20dp" />

                <ImageView
                    android:id="@+id/difficulty3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:foreground="@drawable/default_dot"
                    android:minWidth="20sp"
                    android:minHeight="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <TextView
                    style="@style/TextViewSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/location"
                    style="@style/TextViewSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                style="@style/TextViewSubtitle"
                android:layout_marginTop="32dp"
                android:paddingHorizontal="16dp"
                android:id="@+id/game_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_game"
            android:text="@string/play_game"
            style="@style/CustomFAB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginHorizontal="32dp"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>